--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -383,6 +383,9 @@
 
 /* Footer */
 .site-footer {
+  /* CLS 최적화: 푸터 레이아웃 안정화 */
+  contain: layout style;
+  min-height: 200px;
   margin-top: var(--spacing-3xl);
   padding: var(--spacing-3xl) 0;
   border-top: 2px solid var(--color-border);
